Fix display of price precision

BUG: 492086
FIXED-IN: 5.2